fix(mapping): canonicalise aliases on both sides of the comparison
An alias was only ever applied to the document field name, while the header
index was keyed on the header's raw spelling. Matching was therefore
one-directional, and a template header written with the abbreviation matched
nothing at all:

  header "Manufacturer" + field "Mfr"  -> matched
  header "Mfr"          + field "Mfr"  -> did NOT match
  header "MAWP"         + field "MAWP" -> did NOT match

Those last two fell through to the semantic stage, which spent a model call
re-deriving a match that exact string comparison should have made for free.

Both sides now resolve through HeaderFieldMapper.matchKey, so all four
combinations collapse to one canonical key. The alias table moves into a
HeaderAliases component configurable via app.mapping.aliases: the built-in
entries are engineering terms that suited the first documents this pipeline
saw, and hardcoding them into a generic tool was never right. "none" disables
aliasing entirely.

Normalisation also drops a trailing colon, so a label ("Tag Number:") and a
header ("Tag Number") agree. Punctuation that carries meaning, such as
"Pressure (psi)", is untouched.

Separately: DeterministicMappingResult wrapped its LinkedHashMap in
Map.copyOf, which returns an immutable map with an arbitrary iteration order.
Columns were therefore visited in an order that could shift between runs. The
resolved values are keyed by column so the workbook was still correct, but
non-determinism is not something to leave in a pipeline. Now an unmodifiable
LinkedHashMap, preserving insertion order.

DeterministicMappingTest covers the stage that must never guess: alias
symmetry, configurable and disabled aliases, casing/whitespace/colon
normalisation, duplicate headers, competing fields, unusable values, and that
a value never reaches a column other than its own.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>