@@ -1,5 +1,7 @@
 package com.example.ai_doc.domain.mapping;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -9,7 +11,11 @@ public record DeterministicMappingResult(
         List<IndexedExtractedField> unmatchedFields) {
 
     public DeterministicMappingResult {
-        mappingsByColumn = Map.copyOf(mappingsByColumn);
+        // Not Map.copyOf: that returns an immutable map with an arbitrary iteration order,
+        // which silently made the order columns are visited in vary from run to run. The
+        // resolved values are keyed by column so the workbook was still correct, but an
+        // ordering that shifts underneath you is not something to leave in a pipeline.
+        mappingsByColumn = Collections.unmodifiableMap(new LinkedHashMap<>(mappingsByColumn));
         unmatchedFields = List.copyOf(unmatchedFields);
     }
 }
